fix: Global menu bar bug on mobile using Safari

--- a/packages/frontend/src/components/GlobalMenuBar/globalMenuBar.module.css
+++ b/packages/frontend/src/components/GlobalMenuBar/globalMenuBar.module.css
@@ -26,6 +26,17 @@
   position: relative;
 }
 
+.menuButtonWrapper {
+  display: flex;
+  align-items: center;
+  gap: 0.625rem;
+  background-color: var(--Company-Primary, #111d46);
+  border-radius: 0.375rem;
+  color: #fff;
+  height: 2.25rem;
+  max-height: 36px;
+}
+
 .menuCircle {
   min-width: 2.25rem;
   min-height: 2.25rem;
@@ -54,17 +65,6 @@
   right: 4px;
 }
 
-.menuButtonWrapper {
-  display: flex;
-  align-items: center;
-  gap: 0.625rem;
-  background-color: var(--Company-Primary, #111d46);
-  border-radius: 0.375rem;
-  color: #fff;
-  height: 2.25rem;
-  max-height: 36px;
-}
-
 .menuButtonText {
   font-weight: 500;
 }
@@ -87,9 +87,15 @@
   padding: 0 0 0 0.25rem;
 }
 
+.toggleOpenButton:active {
+  border-style: initial;
+}
+
 .crossSquare {
-  min-width: 36px;
-  min-height: 36px;
+  min-width: 34px;
+  min-height: 34px;
+  max-width: 34px;
+  max-height: 34px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -97,6 +103,7 @@
   color: #fff;
   border-radius: 0.125rem;
   border: 1px solid #9ca3af;
+  box-sizing: content-box;
 }
 
 .active {
